# apertium-swe-dan

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  Makefile.am  NEWS  README  apertium-swe-dan.dan-swe.lrx  apertium-swe-dan.dan-swe.t1x  apertium-swe-dan.dan-swe.t2x  apertium-swe-dan.swe-dan.dix  apertium-swe-dan.swe-dan.lrx  apertium-swe-dan.swe-dan.t1x  apertium-swe-dan.swe-dan.t2x  configure.ac
t/: hash-count
test/: dan-swe-chunker-expected.txt  dan-swe-disam-expected.txt  dan-swe-generator-expected.txt  dan-swe-generator-gold.txt  dan-swe-input.txt  dan-swe-lex-expected.txt  dan-swe-morph-expected.txt  dan-swe-postchunk-expected.txt  dan-swe-pretransfer-expected.txt  dan-swe-regression-biltrans-expected.txt  dan-swe-regression-disam-expected.txt  dan-swe-regression-generator-expected.txt  dan-swe-regression-generator-gold.txt  dan-swe-regression-input.txt  dan-swe-regression-interchunk-expected.txt  dan-swe-regression-lex-expected.txt  dan-swe-regression-postchunk-expected.txt  dan-swe-regression-tagger-expected.txt  hash-all-expected.txt  hash-all-gold.txt  hash-count.sh  swe-dan-contrastive_grammar-biltrans-expected.txt  swe-dan-contrastive_grammar-disam-expected.txt  swe-dan-contrastive_grammar-generator-expected.txt  swe-dan-contrastive_grammar-generator-gold.txt  swe-dan-contrastive_grammar-input.txt  swe-dan-contrastive_grammar-interchunk-expected.txt  swe-dan-contrastive_grammar-lex-expected.txt  swe-dan-contrastive_grammar-morph-expected.txt  swe-dan-contrastive_grammar-postchunk-expected.txt  swe-dan-contrastive_grammar-tagger-expected.txt  (+31 more)
(+1 files in other folders)
